<resources>
    <string name="app_name">AndroidApp</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Services">Services</string>
    <string name="Univer">Find University</string>
    <string name="Donate">Donate</string>
    <string name="Work">Work</string>
    <string name="Popular">Popular</string>
    <string name="Questions">Questions</string>
</resources>